:sparkles: Use root namespace instead of subfolder

--- a/Runtime/8BitForest.Reaction.Runtime.asmdef
+++ b/Runtime/8BitForest.Reaction.Runtime.asmdef
@@ -1,3 +1,14 @@
 {
-	"name": "8BitForest.Reaction.Runtime"
+    "name": "8BitForest.Reaction.Runtime",
+    "rootNamespace": "Reaction",
+    "references": [],
+    "includePlatforms": [],
+    "excludePlatforms": [],
+    "allowUnsafeCode": false,
+    "overrideReferences": false,
+    "precompiledReferences": [],
+    "autoReferenced": true,
+    "defineConstraints": [],
+    "versionDefines": [],
+    "noEngineReferences": false
 }
