:sparkles: Improve Wait

--- a/Runtime/8BitForest.Reaction.asmdef
+++ b/Runtime/8BitForest.Reaction.asmdef
@@ -1,5 +1,5 @@
 {
-    "name": "8BitForest.Reaction.Runtime",
+    "name": "8BitForest.Reaction",
     "rootNamespace": "Reaction",
     "references": [],
     "includePlatforms": [],
